--- a/asciitracer.html
+++ b/asciitracer.html
@@ -63,6 +63,7 @@
                 <script src='js/jquery-1.6.2.min.js' type='text/javascript'></script>
                 <script src='js/jquery.tools.min.js' type='text/javascript'></script>
                 <script src='js/slider.js' type='text/javascript'></script>
+                <script src='perlin.js' type='text/javascript'></script>
                 <script src='asciitracer.js' type='text/javascript' charset='utf-8'></script>
         </head>
         <body>
@@ -111,6 +112,16 @@
         </body>
         <script type='text/javascript'>
                 var interval=null;
+                var spots = [4096];
+                for (var i=0;i<4096;i++){
+                    if ((i % 2) == 0) {
+                        spots[i] = 255;
+                    }
+                    else {
+                        spots[i] = 0;
+                    }
+                }
+                    
 
                 var scene = {
                         background: 0.6,
@@ -128,15 +139,18 @@
                                         id:       2,
                                         type:     1, // sphere
                                         radius:   1,
-                                        surface:  0, // shiny
+                                        surface:  2, // texture
                                         centre:   [0, 1.0, 0],
+                                        textureBuffer: spots,
+                                        textureWidth: 64,
+                                        textureHeight: 64,
                                 },
 
                                 {    // sphere
                                         id:       3,
                                         type:     1,
                                         radius:   0.5,
-                                        surface:  0,
+                                        surface:  0, // shiny
                                         centre:   [-1, 0.5, 1.5],
                                 },
                         ],
@@ -152,6 +166,14 @@
                                         position: [0.0, 7.0, 0.0],
                                         luma: 1.0,
                                 },
+                                {
+                                    position: [7.0, 1.0, 0.0],
+                                    luma: 1.0,
+                                },
+                                {
+                                    position: [0.0, 1.0, 7.0],
+                                    luma: 1.0,
+                                }
                         ]
                 };
 
